--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "moment": "^2.29.1",
+    "node-fetch": "^2.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
@@ -32,8 +33,8 @@
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-tab-view": "^2.15.2",
-    "react-native-web": "~0.13.12",
     "react-native-toast-message": "^1.3.4",
+    "react-native-web": "~0.13.12",
     "react-navigation-header-buttons": "^6.0.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
